--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
                 <!-- ***************  Form **************** -->
                 <fieldset>
+                    <legend>Let's Connect!</legend>
                     <form action="https://formspree.io/f/xyylgqpz" method="post">
                         <div>
                             <label for="full-name">Full name:</label>
