--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <h2>Thinkful Student + Software Engineer</h2>
                 <p>I am new to the Raleigh, NC, area. While I spend most of my time on the computer learning about
                     development, I like to get outside and enjoy the outdoors. You can find me hiking or biking on a
-                    trail nearby.
-                </p>
+                    trail nearby, watching some of my favorite shows on TV, or a good sci-fi movie.</p>
             </div>
 
         </section>
@@ -41,13 +40,16 @@
         <section id="about-me" class="green-background">
 
             <div class="content-wrap">
-                <p>As a student at Thinkful, I have begun my journey to become a software engineer. I am very excited to
-                    learn this new skill and work with a team of like-minded professionals.</p>
+                <h2>About Sean</h2>
+                <p>I have been part of the internet since the early days of dialup and AOL. Over the years, I have
+                    watched it continuously evolve and eventually become a daily part of almost everyone's life.</p>
+                <p>Being a software engineer, I have fully immersed myself in this world. It allows me to work with
+                    groups of like-minded people as a team. Working with a team is great because it will enable you to
+                    collaborate and take your project beyond just your imagination.</p>
                 <p>As a developer, I can offer a wide range of services. I look forward to getting started on your
                     project.</p>
                 <ul>
-                    <li>Website Design</li>
-                    <li>Build applications using React, JavaScript, CSS, and HTML</li>
+                    <li>Build custom e-commerce applications</li>
                     <li>Mobile-first Development to optimize the web experience over all devices</li>
                     <li>Deployment and management of your hosted website.</li>
                 </ul>
