changed links to GitHub and LinkedIn to buttons

--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
 
         </section>
 
-
-
-
-
         <!-- ***************  Contact **************** -->
         <section id="contact-me" class="blue-background">
             <div class="content-wrap">
@@ -73,9 +69,8 @@
 
                 <!-- ***************  linked in Git Hub Email**************** -->
                 <ul class="contact-list">
-                    <li><a href="mailto:sean.cassone@gmail.com">sean.cassone@gmail.com</a></li>
-                    <li><a href="https://github.com/SeanCassone" target="_blank">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/sean-cassone/" target="_blank">LinkedIn</a></li>
+                    <a class="btn" href="https://github.com/SeanCassone" target="_blank">GitHub</a>
+                    <a class="btn" href="https://www.linkedin.com/in/sean-cassone" target="_blank">LinkedIn</a>
                 </ul>
 
                 <!-- ***************  Form **************** -->
@@ -94,7 +89,8 @@
                                 placeholder="xxx-xxx-xxxx" />
 
                             <label for="form-message">Your message:</label>
-                            <textarea id="form-message" name="message" required maxlength="200"></textarea>
+                            <textarea id="form-message" name="message" autofocus="on" required
+                                maxlength="200"></textarea>
 
                             <button type="submit">Submit</button>
                             <button type="reset">Reset</button>
